--- a/HTML_010_hello/sub1/layout9.html
+++ b/HTML_010_hello/sub1/layout9.html
@@ -70,8 +70,11 @@
         background-color: green;
       }
 
+      /*
+      flex 요소로서 여기서부터 오른쪽 정렬하기
+      */
       nav li:nth-child(4) {
-        margin: auto;
+        margin-left: auto;
       }
 
       section {
